CHANGES
=======

0.14 (unreleased)
-----------------

- `zeit.connector.connector.Connector` doesn't use the component architecture
  now. This makes it easier to use in console scripts.
- <feed> is now <channel> (mock connector).
- connector's move method uses copy+delete now

0.13 (2008-04-07)
-----------------

- Made DeleteProperty a rock in the zope.security.

0.12 (2008-03-25)
-----------------

- Moved locktoken storage to a separate utility, out of a cache.
- Added events to notify caches about invalidated resources.